# MotoKonig-web-application

./: .coverage  .env.test  .gitattributes  .gitignore  .gitlab-ci.yml  Caddyfile  README.md  alembic.ini  aws_ec2_initial_setup.sh  new.gitlab-ci.yml  pyproject.toml  pytest.ini  structure.md
app/: main.py
app/adapters/repositories/: sql_user_repo.py
app/application/: exceptions.py
app/application/controllers/: auth_controller.py  event_controller.py  listing_controller.py  (+9 more)
app/config/: logging.py  logging_config.py  settings.py
app/infrastructure/: broker.py
app/presentation/: api.py
docker/: Dockerfile  compose.yml  dev_compose.yml  entrypoint.sh
migrations/: env.py
migrations/versions/: 4c5c1204d72e_init.py  add_marketplace_tables.py  add_media_files_table.py  add_moto_clubs_system.py  add_motokonig_routes.py  add_motorcycles_table.py  add_profiles_table.py  c8b24b17d9fb_init.py
moto_dataset/: brands.csv
tests/: conftest.py  fake_motorcycle_repo.py  fake_repo.py  helpers.py  test_api.py  test_auth_comprehensive.py  test_auth_controller.py  test_auth_endpoints.py  test_edge_cases.py  test_event_entity.py  test_integration.py  test_listing_entity.py  test_listing_favorite_entity.py  test_listing_value_objects.py  test_logout_use_case.py  test_middleware.py  test_motorcycle_controller.py  test_motorcycle_entity.py  test_motorcycle_repository.py  test_password_service.py  test_pin_auth.py  test_pin_code.py  test_pin_storage.py  test_profile_entity.py  test_redis_client.py  test_simple.py  test_social_link_entity.py  test_token_service.py  test_use_cases.py  test_user_controller.py  test_user_endpoints.py  test_user_entity.py
tests/factories/: listing_factory.py  motorcycle_factory.py  profile_factory.py  user_factory.py
tests/fixtures/: enhanced_repositories.py  smart_mocks.py
tests/integration/: test_health_check.py  test_redis_client.py
tests/unit/: test_listing_entity.py  test_listing_favorite_entity.py  test_listing_value_objects.py  test_logout_use_case.py  test_motorcycle_controller.py  test_motorcycle_entity.py  test_motorcycle_repository.py  test_pin_code.py  test_pin_storage.py  test_profile_entity.py  test_token_service.py  test_use_cases.py  test_user_entity.py
(+339 files in other folders)
