[project]
name = "api-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.4.2",
    "aioboto3>=14.3.0",
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "dishka>=1.5.3",
    "fastapi[standard]>=0.115.12",
    "faststream[kafka]>=0.5.40",
    "ruff>=0.11.9",
]
